--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,51 @@
-.container{
-display:grid;
+.container {
+  background-color:blanchedalmond;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
+  padding: 10px;
+  
+}
+
+.container > div {
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 30px;
+  padding: 20px 0;
+  text-align: center;
+  
+}
+.Element{
+  align-items: center;
+  align-self: center;
+  background-color: black;
+  border: 5px solid gray;
+  color: #fff;
+  contain: content;
+  height: max-content;
+  padding: 20px;
+  text-align: center;
+
+
+}
+.Element__atomicMass,.Element__symbol,.Element__number,.Element__name{
+  font-size: 29px;
+  text-align: center;
+}
+
+.grid-container > div {
+  align-self: center;
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 30px;
+  padding: 20px 0;
+  text-align: center;
+}
+
+.item1 {
+  grid-column-end: 3;
+  grid-row-start: 1;
+  
+}
+.item6 {
+  grid-column-end: 3;
+  grid-column-start: 2;
 }
